# mermaid-lane

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: iptv-help.md  run-iptv-tests.md  validate-playlist.md
web/: .dockerignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVLOG.md  Dockerfile  README.md  docker-compose.yml  fly.toml
web/.github/workflows/: ci.yml
web/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
web/backend/app/: __init__.py  config.py  main.py
web/backend/app/models/: channel.py  epg.py  metadata.py
web/backend/app/routers/: channels.py  epg.py  streams.py  user.py
web/backend/app/scripts/: analyze_failures.py  import_epg.py  import_tvgarden.py  stream_audit.py
web/backend/app/services/: cache.py  data_sync.py  epg_mapping.py  epg_parser.py  geo_bypass.py  health_worker.py  m3u_parser.py  stream_proxy.py  transcoder.py
web/backend/data/: failed_streams.json  failure_report.txt  health_snapshot.json  stream_audit_20251214_033045.json  stream_audit_20251214_033444.json
web/backend/tests/: conftest.py  test_cache_and_security.py  test_epg_mapping.py  test_epg_parser.py  test_m3u_parser.py  test_playable_channels.py  test_player_integration.py  test_stream_proxy.py  test_vendor_assets.py
web/frontend/: index.html  manifest.json  robots.txt
web/frontend/css/: epg.css  main.css  player.css
web/frontend/js/: api.js  app.js  channels.js  epg.js  favorites.js  health-poller.js  player.js  (+1 more)
web/iptv_streams/: manual_test.m3u
